# SwSI

./: .gitignore  pyproject.toml
data/: krakow_housing.csv
lab_files/lab1/: lab1.py
lab_files/lab2/: lab2.ipynb  lab2.py
lab_files/lab3/: lab3.py
lab_files/lab4/: lab4.py
lab_files/lab5/: lab5.py
lab_files/lab6/: lab6.py
lab_files/lab7/: lab7.py
project_files/: dota_rank_classifier.ipynb  proj_milestone_1.md  proj_milestone_2.md
