[project]
name = "swsi"
version = "0.1.0"
description = "Course in statistical inference applied to machine learning and data analysis"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "catboost>=1.2.10",
    "islp>=0.4.1",
    "l0bnb>=1.0.0",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "marimo>=0.20.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
